; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ppp/extr_pptp.c_add_chan.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ppp/extr_pptp.c_add_chan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pppox_sock = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.pptp_addr }
%struct.pptp_addr = type { i32 }

@add_chan.call_id = internal global i32 0, align 4
@chan_lock = common dso_local global i32 0, align 4
@callid_bitmap = common dso_local global i32 0, align 4
@MAX_CALLID = common dso_local global i32 0, align 4
@callid_sock = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pppox_sock*, %struct.pptp_addr*)* @add_chan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_chan(%struct.pppox_sock* %0, %struct.pptp_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pppox_sock*, align 8
  %5 = alloca %struct.pptp_addr*, align 8
  store %struct.pppox_sock* %0, %struct.pppox_sock** %4, align 8
  store %struct.pptp_addr* %1, %struct.pptp_addr** %5, align 8
  %6 = call i32 @spin_lock(i32* @chan_lock)
  %7 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %8 = getelementptr inbounds %struct.pptp_addr, %struct.pptp_addr* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %33, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @callid_bitmap, align 4
  %13 = load i32, i32* @MAX_CALLID, align 4
  %14 = load i32, i32* @add_chan.call_id, align 4
  %15 = add nsw i32 %14, 1
  %16 = call i32 @find_next_zero_bit(i32 %12, i32 %13, i32 %15)
  store i32 %16, i32* @add_chan.call_id, align 4
  %17 = load i32, i32* @add_chan.call_id, align 4
  %18 = load i32, i32* @MAX_CALLID, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %11
  %21 = load i32, i32* @callid_bitmap, align 4
  %22 = load i32, i32* @MAX_CALLID, align 4
  %23 = call i32 @find_next_zero_bit(i32 %21, i32 %22, i32 1)
  store i32 %23, i32* @add_chan.call_id, align 4
  %24 = load i32, i32* @add_chan.call_id, align 4
  %25 = load i32, i32* @MAX_CALLID, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  br label %65

28:                                               ; preds = %20
  br label %29

29:                                               ; preds = %28, %11
  %30 = load i32, i32* @add_chan.call_id, align 4
  %31 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %32 = getelementptr inbounds %struct.pptp_addr, %struct.pptp_addr* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  br label %42

33:                                               ; preds = %2
  %34 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %35 = getelementptr inbounds %struct.pptp_addr, %struct.pptp_addr* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @callid_bitmap, align 4
  %38 = call i64 @test_bit(i32 %36, i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %33
  br label %65

41:                                               ; preds = %33
  br label %42

42:                                               ; preds = %41, %29
  %43 = load %struct.pppox_sock*, %struct.pppox_sock** %4, align 8
  %44 = getelementptr inbounds %struct.pppox_sock, %struct.pppox_sock* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %48 = bitcast %struct.pptp_addr* %46 to i8*
  %49 = bitcast %struct.pptp_addr* %47 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %48, i8* align 4 %49, i64 4, i1 false)
  %50 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %51 = getelementptr inbounds %struct.pptp_addr, %struct.pptp_addr* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* @callid_bitmap, align 4
  %54 = call i32 @set_bit(i32 %52, i32 %53)
  %55 = load i32*, i32** @callid_sock, align 8
  %56 = load %struct.pptp_addr*, %struct.pptp_addr** %5, align 8
  %57 = getelementptr inbounds %struct.pptp_addr, %struct.pptp_addr* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i32, i32* %55, i64 %59
  %61 = load i32, i32* %60, align 4
  %62 = load %struct.pppox_sock*, %struct.pppox_sock** %4, align 8
  %63 = call i32 @rcu_assign_pointer(i32 %61, %struct.pppox_sock* %62)
  %64 = call i32 @spin_unlock(i32* @chan_lock)
  store i32 0, i32* %3, align 4
  br label %67

65:                                               ; preds = %40, %27
  %66 = call i32 @spin_unlock(i32* @chan_lock)
  store i32 -1, i32* %3, align 4
  br label %67

67:                                               ; preds = %65, %42
  %68 = load i32, i32* %3, align 4
  ret i32 %68
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @find_next_zero_bit(i32, i32, i32) #1

declare dso_local i64 @test_bit(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @set_bit(i32, i32) #1

declare dso_local i32 @rcu_assign_pointer(i32, %struct.pppox_sock*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
